[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/EnemyAIControlled.gd" type="Script" id=1]
[ext_resource path="res://src/Character.tscn" type="PackedScene" id=2]

[node name="AIController" type="Node2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="EnemyChar" parent="." groups=[
"Enemy",
] instance=ExtResource( 2 )]
max_speed = 60

[node name="LookAroundTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PursueTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="LookAroundTimer" to="." method="_on_LookAroundTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="PursueTimer" to="." method="_on_PursueTimer_timeout"]

[editable path="EnemyChar"]
